packages/kit/test/apps/custom-layout/src/routes/errors/error-in-handle.svelte
<!-- this will never be rendered, because hooks.js will throw an error for this path -->
